(feat) add delay option for /submit* endpoints
