# web/docs/swagger.json
@@ -317,9 +317,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Probing started",
+                        "description": "The URL Result object",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Result"
                         }
                     }
                 }
@@ -555,6 +555,9 @@
         "api.submitRequestOptions": {
             "type": "object",
             "properties": {
+                "delay": {
+                    "type": "integer"
+                },
                 "format": {
                     "type": "string"
                 },
